add semantic ui

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl-PL">
 <head>
+   <meta charset="UTF-8">
   <title>Nauka React</title>
 </head>
 <body>
