--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pl-PL">
 <head>
    <meta charset="UTF-8">
-  <title>Nauka React</title>
+  <title>React Sport: sample app</title>
 </head>
 <body>
   <div id="app"></div>
